--- a/Projeto_Final/src/views/atualizar_usuario.html
+++ b/Projeto_Final/src/views/atualizar_usuario.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>Cadastrar Usuário</title>
+    <title>Atualizar Cadastro</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,12 +17,12 @@
         <!-- 1/3 da seção horizontal com texto + imagem -->
         <div class="welcome-section">
             <h1></h1>
-            <img src="/img/logo.png" class="img-fluid" alt="VENDIX" style="align-items: center; vertical-align: middle;">
+            <img src="/img/logo2.png" class="img-fluid" alt="VENDIX" style="align-items: center; vertical-align: middle;">
         </div>
         
         <!-- 2/3 da seção horizontal com o formulario de cadastro -->
         <div class="form-section">
-            <h1 class="text-center">CADASTRO</h1>
+            <h1 class="text-center" style="color: #FF7F3E;">ATUALIZAR CADASTRO</h1>
 
             <!-- Mensagem de cadastro com sucesso -->
             {{#sucesso}}
@@ -35,7 +35,7 @@
             {{/erro}}
 
             <!-- Formulário de Cadastro -->
-            <form action="/cadastrar_usuario" method="post">
+            <form action="/atualizar_usuario" method="post">
                 
                 <!-- 1ª linha -->
                 <div class="form-group">
@@ -101,8 +101,8 @@
             </form>
 
             <!-- Botão VOLTAR -->
-            <div class="form-group">
-                <a href="/" class="btn btn-danger w-100">Voltar</a>
+            <div class="form-group mt-3">
+                <a href="/home" class="btn btn-danger w-100">Voltar</a>
             </div>
         
         </div>
