--- a/Projeto_Final/src/views/index.html
+++ b/Projeto_Final/src/views/index.html
@@ -2,27 +2,26 @@
 <html lang="pt-br">
 
 <head>
-  <title>Index</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
+  <title>Login</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body class="">
-  <section class="vh-100">
+<body class="d-flex flex-column min-vh-100 secao">
+  <section class="vh-100 container-fluid">
     <div class="container-fluid h-custom">
       <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-md-9 col-lg-6 col-xl-5">
-          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp" class="img-fluid"
-            alt="Sample image">
+        
+        <!-- 1ª metade do site = Logo -->
+        <div class="col-md-8 col-lg-6 col-xl-4">
+          <img src="/img/logo.png" class="img-fluid" alt="VENDIX" style="align-items: center;">
         </div>
 
-        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-
-          <h1>VENDEDOR TOP</h1>
+        <!-- 2ª metade do site = Formulário de Login -->
+        <div class="col-md-9 col-lg-6 col-xl-5 offset-xl-1">
 
           <!-- Mensagem de erro de Autenticação -->
           {{#erro_autenticacao}}
@@ -37,15 +36,13 @@
             <!-- Login -->
             <div data-mdb-input-init class="form-outline mb-4">
               <label class="form-label" for="email">Login</label>
-              <input type="email" id="email" class="form-control form-control-lg" name="email"
-                placeholder="Entre com o endereço de e-mail" />
+              <input type="email" id="email" class="form-control form-control-lg" name="email" />
             </div>
 
             <!-- Senha -->
             <div data-mdb-input-init class="form-outline mb-3">
               <label class="form-label" for="senha">Senha</label>
-              <input type="password" id="senha" class="form-control form-control-lg" nome="senha"
-                placeholder="Entre com a senha" />
+              <input type="password" id="senha" class="form-control form-control-lg" name="senha" />
             </div>
 
             <!-- Texto "Esqueceu a senha?" -->
@@ -68,17 +65,13 @@
       </div>
     </div>
 
-    <!-- Rodapé -->
-    <div
-      class="d-flex flex-column flex-md-row text-center text-md-start justify-content-center py-4 px-4 px-xl-5 bg-primary">
-
-      <!-- Copyright -->
-      <div class="text-white mb-3 mb-md-0">
-        Copyright © 2020. All rights reserved.
-      </div>
-
-    </div>
+    
   </section>
+
+  <!-- Rodapé -->
+  <footer class="rodape mt-auto">
+    <div class="text-white mb-3 mb-md-0">Desenvolvimento WEB 2024 © | Aluno: Daniel Souza | Professor: João Pedro</div>
+  </footer>
 
 </body>
 
