--- a/Projeto_Final/src/views/modificar_produto.html
+++ b/Projeto_Final/src/views/modificar_produto.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>Cadastrar Produto</title>
+    <title>Modificar Produto</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -23,95 +23,91 @@
         <div class="d-flex col-2 flex-wrap flex-md-nowrap">
             <p>Bem vindo, {{usuario.nome}}</p>
         </div>
-        
-        <!-- Controle de produtos -->
+
+        <!-- Cadastrar novo produtos + Controle de produtos -->
         <div class="col-6 d-flex align-items-center justify-content-center mt-3 mt-md-0">
+            <a class="navbar-nav" href="/home" style="margin-right: 25px;">Cadastrar novo Produtos</a>
             <a class="navbar-nav" href="/controle_produtos">Controle de Produtos</a>
         </div>
 
         <!-- Configurações + Sair -->
         <div class="col-3 d-flex align-items-center justify-content-md-end mt-3 mt-md-0">
             <div class="btn-group">
-                <button type="button" class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                <button type="button" class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown"
+                    aria-expanded="false">
                     Configurações
                 </button>
                 <ul class="dropdown-menu dropdown-menu-end">
                     <li><a class="dropdown-item" href="/atualizar_usuario">Atualizar Cadastro</a></li>
-                    <li><hr class="dropdown-divider"></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
                     <li><a class="dropdown-item" href="/sair">Sair</a></li>
                 </ul>
             </div>
         </div>
-        
     </nav>
-    
+
     <!-- Corpo do site -->
     <div class="container-fluid">
         <div class="row">
             <main class="col-11 px-md-4 py-4" style="margin: auto;">
-                
-                <!-- Formulário de Cadastro dos produtos -->
-                <form action="/cadastrar_produto" method="post">
+
+                <!-- Formulário de Modificação do produto -->
+                <form action="/modificar_produto/{{produto.id_produto}}" method="post">
                     <div class="row mt-3 mb-5">
-                        <h4 style="text-align: center;">CADASTRAR NOVO PRODUTO</h4>
-                        
+                        <h4 style="text-align: center;">MODIFICAR PRODUTO</h4>
+
                         <!-- 1ª linha -->
                         <div class="col-8">
                             <div class="mt-1">
                                 <label for="nome" class="form-label">Nome:</label>
-                                <input type="text" class="form-control" id="nome" name="nome">
+                                <input type="text" class="form-control" id="nome" name="nome" value="{{produto.nome}}">
                             </div>
                         </div>
                         <div class="col-2">
                             <div class="mt-1">
                                 <label for="preco" class="form-label">Preço:</label>
-                                <input type="number" step="0.01" class="form-control" id="preco" name="preco">
+                                <input type="number" step="0.01" class="form-control" id="preco" name="preco"
+                                    value="{{produto.preco}}">
                             </div>
                         </div>
                         <div class="col-2">
                             <div class="mt-1">
                                 <label for="quantidade" class="form-label">Quantidade:</label>
-                                <input type="number" class="form-control" id="quantidade" name="quantidade">
+                                <input type="number" class="form-control" id="quantidade" name="quantidade"
+                                    value="{{produto.quantidade}}">
                             </div>
                         </div>
-                        
+
                         <!-- 2ª linha -->
                         <div class="col-6" style="margin-top: 20px; margin-bottom: 20px;">
                             <div class="mt-1">
                                 <label for="descricao" class="form-label">Descrição:</label>
-                                <textarea class="form-control" rows="3" id="descricao" name="descricao"></textarea>
+                                <textarea class="form-control" rows="3" id="descricao"
+                                    name="descricao">{{produto.descricao}}</textarea>
                             </div>
                         </div>
                         <div class="col-6" style="margin-top: 20px;">
                             <div class="mt-1">
                                 <label for="categoria" class="form-label">Categoria:</label>
-                                <input type="text" class="form-control" id="categoria" name="categoria">
+                                <input type="text" class="form-control" id="categoria" name="categoria"
+                                    value="{{produto.categoria}}">
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-success w-100 mt-2">Adicionar</button>
+                        <button type="submit" class="btn btn-success w-100 mt-2">Salvar Alterações</button>
                     </div>
                 </form>
 
-                <!-- Mostra Produtos Cadastrados -->
-                <div class="row my-4">
-                    {{#produtos}}
-                    <div class="col-3 mt-3">
-                        <div class="card">
-                            <h4 class="card-header {{estilo}}">{{nome}}</h4>
-                            <div class="card-body">
-                                <h6 class="card-title">{{categoria}}</h6>
-                                <p class="card-text">R$ {{preco}}  |  Qtd: {{quantidade}}</p>
-                                <p class="card-text">{{descricao}}</p>
-                            </div>
-                        </div>
-                    </div>
-                    {{/produtos}}
-                </div>                
-            
+                <!-- Botão VOLTAR -->
+                <div class="form-group mt-3">
+                    <a href="/home" class="btn btn-danger w-100">Voltar</a>
+                </div>
+
             </main>
         </div>
     </div>
-    
+
     <!-- Rodapé -->
     <footer class="rodape mt-auto">
         <div class="text-white mb-3 mb-md-0">Desenvolvimento WEB 2024 © | Aluno: Daniel Souza | Professor: João Pedro</div>
